--- a/config/sync/views.view.customers.yml
+++ b/config/sync/views.view.customers.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - imagex_custom
 id: customers
-label: Customers
+label: 'Customers list'
 module: views
 description: ''
 tag: ''
@@ -280,18 +280,56 @@ display:
           entity_type: customer
           entity_field: customer_id
           plugin_id: standard
-      title: Customers
+      title: 'Customers list'
       header: {  }
       footer: {  }
       empty: {  }
       relationships: {  }
-      arguments: {  }
+      arguments:
+        customer_id:
+          id: customer_id
+          table: customer
+          field: customer_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: ignore
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          entity_type: customer
+          entity_field: customer_id
+          plugin_id: numeric
       display_extenders: {  }
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
       tags: {  }
   page_1:
@@ -307,5 +345,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
       tags: {  }
