--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -30,7 +30,10 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  rest: 0
+  restui: 0
   search: 0
+  serialization: 0
   shortcut: 0
   system: 0
   taxonomy: 0
